v3.3.0.0 -Completely Stripped out Mson (bugs are possible) -KamiHelpCommand pages should be clickable now