@@ -5,19 +5,22 @@ import com.kamikazejam.kamicommon.command.requirement.Requirement;
 import com.kamikazejam.kamicommon.command.requirement.RequirementAbstract;
 import com.kamikazejam.kamicommon.command.requirement.RequirementHasPerm;
 import com.kamikazejam.kamicommon.command.type.Type;
-import com.kamikazejam.kamicommon.command.type.enumeration.TypeEnum;
+import com.kamikazejam.kamicommon.nms.NmsAPI;
+import com.kamikazejam.kamicommon.nms.abstraction.chat.KMessage;
+import com.kamikazejam.kamicommon.nms.abstraction.chat.impl.KMessageBlock;
+import com.kamikazejam.kamicommon.nms.abstraction.chat.impl.KMessageSingle;
 import com.kamikazejam.kamicommon.util.KUtil;
+import com.kamikazejam.kamicommon.util.StringUtil;
 import com.kamikazejam.kamicommon.util.Txt;
 import com.kamikazejam.kamicommon.util.collections.KamiList;
 import com.kamikazejam.kamicommon.util.collections.KamiSet;
 import com.kamikazejam.kamicommon.util.exception.KamiCommonException;
 import com.kamikazejam.kamicommon.util.interfaces.Active;
-import com.kamikazejam.kamicommon.util.mson.Mson;
-import com.kamikazejam.kamicommon.util.mson.MsonMessenger;
 import com.kamikazejam.kamicommon.util.predicate.Predicate;
 import com.kamikazejam.kamicommon.util.predicate.PredicateLevenshteinClose;
 import com.kamikazejam.kamicommon.util.predicate.PredicateStartsWithIgnoreCase;
 import lombok.Getter;
+import lombok.Setter;
 import org.bukkit.ChatColor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.PluginIdentifiableCommand;
@@ -29,7 +32,7 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
-@SuppressWarnings({"BooleanMethodIsAlwaysInverted", "unused"})
+@SuppressWarnings({"unused", "BooleanMethodIsAlwaysInverted", "UnstableApiUsage", "UnusedReturnValue"})
 public class KamiCommand implements Active, PluginIdentifiableCommand {
 	private static final Set<KamiCommand> allInstances = new KamiSet<>();
 
@@ -149,7 +152,8 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 	// === PARAMETERS ===
 
 	// The command parameters.
-	@Getter
+	@Setter
+    @Getter
 	protected List<Parameter<?>> parameters = new KamiList<>();
 
 	// === PREPROCESS ===
@@ -188,24 +192,27 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 	protected String desc = null;
 
 	// A specific permission node to use for description if desc is null.
-	protected String descPermission = null;
+	@Setter
+    protected String descPermission = null;
 
 	// Free text displayed at the top of the help command.
-	@Getter
-	protected List<?> help = new ArrayList<>();
+    @Getter
+	protected @NotNull List<KMessageSingle> help = new KamiList<>();
 
 	// The visibility of this command in help command.
-	@Getter
+	@Setter
+    @Getter
 	protected Visibility visibility = Visibility.VISIBLE;
 
 	// The priority of this command when aliases are ambiguous.
-	@Getter
+	@Setter
+    @Getter
 	protected long priority = 0;
 
 	// === EXECUTION ===
 
 	// The raw string arguments passed upon execution. An empty list if there are none.
-	@Getter
+	@Setter @Getter
 	protected List<String> args = new KamiList<>();
 
 	// The index of the next arg to read.
@@ -384,7 +391,7 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 	public KamiCommandHelp getHelpCommand() {
 		if (!this.hasChildren()) this.addChild(new KamiCommandHelp(), 0);
 		List<KamiCommand> children = this.getChildren();
-		return (KamiCommandHelp) children.get(0);
+		return (KamiCommandHelp) children.getFirst();
 	}
 
 	// -------------------------------------------- //
@@ -515,11 +522,7 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 	// PARAMETERS
 	// -------------------------------------------- //
 
-	public void setParameters(List<Parameter<?>> parameters) {
-		this.parameters = parameters;
-	}
-
-	public Parameter<?> getParameter(int index) {
+    public Parameter<?> getParameter(int index) {
 		if (this.isConcatenating() && this.getConcatenationIndex() < index) index = this.getConcatenationIndex();
 		return this.getParameters().get(index);
 	}
@@ -774,72 +777,6 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 	}
 
 	// -------------------------------------------- //
-	// PUZZLER > APPLY
-	// -------------------------------------------- //
-
-	public List<String> applyPuzzler(List<String> args, CommandSender sender) {
-		args = this.applyConcatenating(args);
-		args = this.applySwapping(args, sender);
-		return new ArrayList<>(args);
-	}
-
-	public List<String> applyConcatenating(List<String> args) {
-		// Really?
-		if (!this.isConcatenating()) return args;
-
-		// Create Ret
-		List<String> ret = new KamiList<>();
-
-		// Fill Ret
-		final int maxIdx = Math.min(this.getConcatenationIndex(), args.size());
-		ret.addAll(args.subList(0, maxIdx)); // The args that should not be concatenated.
-		if (args.size() > maxIdx) {
-			ret.add(Txt.implode(args.subList(maxIdx, args.size()), " "));
-		}
-
-		// Return Ret
-		return ret;
-	}
-
-	public List<String> applySwapping(List<String> args, CommandSender sender) {
-		// Really?
-		if (!this.isSwapping()) return args;
-
-		// So if there is too many, or too few args. We can't do much here.
-		if (!this.isArgsValid(args)) return args;
-
-		String[] ret = new String[this.getParameters().size()];
-
-		args:
-		for (String arg : args) {
-			for (int i = 0; i < this.getParameters().size(); i++) {
-				Type<?> type = this.getParameterType(i);
-
-				if (ret[i] != null) continue; // If that index is already filled.
-
-				// We do in fact want to allow null args.
-				// Those are used by us in some special circumstances.
-				if (arg != null && !type.isValid(arg, sender)) continue; // If this arg isn't valid for that index.
-
-				ret[i] = arg;
-				continue args; // That arg is now set :)
-			}
-			// We will only end up here if an arg didn't fit any of the types.
-			// In that case we failed.
-			return args;
-		}
-
-		// Ensure that the required args are filled.
-		for (int i = 0; i < this.getParameterCountRequired(sender); i++) {
-			if (ret[i] != null) continue;
-			// We end up here if an required arg wasn't filled. In that case we failed.
-			return args;
-		}
-
-		return Arrays.asList(ret);
-	}
-
-	// -------------------------------------------- //
 	// REQUIREMENTS
 	// -------------------------------------------- //
 
@@ -864,11 +801,11 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		return (T) this;
 	}
 
-	public boolean isRequirementsMet(CommandSender sender, boolean verbose) {
+	public boolean isRequirementsMet(@NotNull CommandSender sender, boolean verbose) {
 		return RequirementAbstract.isRequirementsMet(this.getRequirements(), sender, this, verbose);
 	}
 
-	public String getRequirementsError(CommandSender sender, boolean verbose) {
+	public String getRequirementsError(@NotNull CommandSender sender, boolean verbose) {
 		return RequirementAbstract.getRequirementsError(this.getRequirements(), sender, this, verbose);
 	}
 
@@ -889,11 +826,7 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		return "";
 	}
 
-	public void setDescPermission(String descPermission) {
-		this.descPermission = descPermission;
-	}
-
-	public String getDescPermission() {
+    public String getDescPermission() {
 		if (this.descPermission != null) return this.descPermission;
 		// Otherwise we try to find one.
 		for (Requirement requirement : this.getRequirements()) {
@@ -903,59 +836,13 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		return null;
 	}
 
-	public void setHelp(List<?> val) {
-		this.help = val;
-	}
-
-	public void setHelp(Object @NotNull ... val) {
-		this.help = Arrays.asList(val);
-	}
-
-	public void setVisibility(Visibility visibility) {
-		this.visibility = visibility;
-	}
-
-	public boolean isVisibleTo(CommandSender sender) {
+    public boolean isVisibleTo(CommandSender sender) {
 		if (this.getVisibility() == Visibility.VISIBLE) return true;
 		if (this.getVisibility() == Visibility.INVISIBLE) return false;
 		return this.isRequirementsMet(sender, false);
 	}
 
-	public void setPriority(long priority) {
-		this.priority = priority;
-	}
-
-	// -------------------------------------------- //
-	// PERMISSIONS
-	// -------------------------------------------- //
-
-	protected static <T extends Enum<T>> @Nullable T getPerm(String permName, boolean lenient, Class<T> permClass) {
-		permName = getPermCompareString(permName, lenient);
-		for (T perm : TypeEnum.getEnumValues(permClass)) {
-			String compare = getPermCompareString(perm.name(), lenient);
-			if (compare.equals(permName)) return perm;
-		}
-		return null;
-	}
-
-	@Contract("_, false -> param1")
-	protected static @NotNull String getPermCompareString(@NotNull String permName, boolean lenient) {
-		if (lenient) {
-			permName = permName.toUpperCase();
-			permName = permName.replace("_", "");
-		}
-		return permName;
-	}
-
-	// -------------------------------------------- //
-	// EXECUTION
-	// -------------------------------------------- //
-
-	public void setArgs(List<String> args) {
-		this.args = args;
-	}
-
-	// -------------------------------------------- //
+    // -------------------------------------------- //
 	// EXECUTOR
 	// -------------------------------------------- //
 
@@ -964,29 +851,25 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 			// Sender Field - Setup
 			this.senderFieldsOuter(sender);
 
-			// Apply Puzzler
-			args = this.applyPuzzler(args, sender);
-			this.setArgs(args);
-
 			// Requirements
 			if (!this.isRequirementsMet(sender, true)) return;
 
 			// Child Execution
 			if (this.isParent() && !args.isEmpty()) {
 				// Get matches
-				String token = args.get(0);
+				String token = args.getFirst();
 
 				Set<KamiCommand> matches = this.getChildren(token, false, null, true);
 
 				// Score!
 				if (matches.size() == 1) {
 					KamiCommand child = matches.iterator().next();
-					args.remove(0);
+					args.removeFirst();
 					child.execute(sender, args);
 				}
 				// Crap!
 				else {
-					Mson base;
+					String base;
 					Collection<KamiCommand> suggestions;
 
 					if (matches.isEmpty()) {
@@ -1001,20 +884,29 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 					// Message: "The sub command X couldn't be found."
 					// OR
 					// Message: "The sub command X is ambiguous."
-					Mson blueToken = mson(token).color(ChatColor.AQUA);
-					MsonMessenger.get().messageOne(sender, base.replaceAll(Lang.COMMAND_REPLACEMENT, blueToken).command(this));
+					base = base.replace(Lang.COMMAND_REPLACEMENT, ChatColor.AQUA + token);
+
+					// Create the KMessage which will include a click event for this command.
+					KMessage message = KMessageSingle.ofClickRunCommand(base, this.getCommandLine());
+					NmsAPI.getMessageManager().processAndSend(sender, message);
 
 					// Message: "/f access ..."
 					// Message: "/f ally ..."
 					for (KamiCommand suggestion : suggestions) {
-						MsonMessenger.get().messageOne(sender, suggestion.getTemplate(false, false, sender));
+						KMessage template = suggestion.getTemplateClickSuggest(false, false, false, sender);
+						NmsAPI.getMessageManager().processAndSend(sender, template);
 					}
 
 					// Message: "Use /Y to see all commands."
-					MsonMessenger.get().messageOne(sender, Lang.COMMAND_CHILD_HELP.replaceAll(Lang.COMMAND_REPLACEMENT, this.getTemplate(false, false, sender)).command(this));
+					KMessage help = new KMessageSingle(Lang.COMMAND_CHILD_HELP).addClickSuggestCommand(
+									Lang.COMMAND_REPLACEMENT,
+									this.getTemplate(false, false, false, sender),
+									this.getCommandLine()
+							);
+					NmsAPI.getMessageManager().processAndSend(sender, help);
 				}
 
-				// NOTE: This return statement will jump to the finally block.
+				// NOTE: This return statement will jump to the 'finally' block.
 				return;
 			}
 
@@ -1025,8 +917,9 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 			this.perform();
 		} catch (KamiCommonException ex) {
 			// Sometimes Types (or commands themselves) throw exceptions, to stop executing and notify the user.
-			if (ex.hasMessages()) {
-				MsonMessenger.get().messageOne(sender, ex.getMessages());
+			KMessageSingle message = ex.getKMessage();
+			if (message != null) {
+				NmsAPI.getMessageManager().processAndSend(sender, message);
 			}
 		} catch (Throwable other) {
 			other.printStackTrace();
@@ -1067,8 +960,8 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 	public boolean isArgsValid(@NotNull List<String> args, CommandSender sender) {
 		if (args.size() < this.getParameterCountRequired(sender)) {
 			if (sender != null) {
-				MsonMessenger.get().msgOne(sender, Lang.COMMAND_TOO_FEW_ARGUMENTS);
-				MsonMessenger.get().messageOne(sender, this.getTemplate());
+				sender.sendMessage(StringUtil.t(Lang.COMMAND_TOO_FEW_ARGUMENTS));
+				sender.sendMessage(StringUtil.t(this.getTemplate(false, false, false, sender)));
 			}
 			return false;
 		}
@@ -1079,78 +972,78 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 			if (sender != null) {
 				// Get the too many string slice
 				List<String> theTooMany = args.subList(this.getParameterCount(sender), args.size());
-				MsonMessenger.get().msgOne(sender, Lang.COMMAND_TOO_MANY_ARGUMENTS, Txt.implodeCommaAndDot(theTooMany, Txt.parse("<aqua>%s"), Txt.parse("<b>, "), Txt.parse("<b> and "), ""));
-				MsonMessenger.get().msgOne(sender, Lang.COMMAND_TOO_MANY_ARGUMENTS2);
-				MsonMessenger.get().messageOne(sender, this.getTemplate());
+				sender.sendMessage(StringUtil.t(String.format(Lang.COMMAND_TOO_MANY_ARGUMENTS, Txt.implodeCommaAndDot(
+						theTooMany, StringUtil.t("&b%s"), StringUtil.t("&c, "), StringUtil.t("&c and "), "")
+				)));
+				sender.sendMessage(StringUtil.t(Lang.COMMAND_TOO_MANY_ARGUMENTS2));
+				sender.sendMessage(StringUtil.t(this.getTemplate(false, false, false, sender)));
 			}
 			return false;
 		}
 		return true;
 	}
 
-	public boolean isArgsValid(List<String> args) {
-		return this.isArgsValid(args, null);
-	}
-
 	// -------------------------------------------- //
 	// TEMPLATE
 	// -------------------------------------------- //
 
-	public static final Mson TEMPLATE_CORE = Mson.mson("/").color(ChatColor.AQUA);
+	public static final String TEMPLATE_CORE = ChatColor.AQUA + "/";
 
-	public Mson getTemplate(boolean addDesc, boolean onlyFirstAlias, CommandSender sender) {
-		return this.getTemplate(addDesc, onlyFirstAlias, false, sender);
+	@NotNull
+	public KMessageSingle getTemplateClickSuggest(boolean addDesc, boolean onlyFirstAlias, boolean onlyOneSubAlias, CommandSender sender) {
+		String ret = getTemplate(addDesc, onlyFirstAlias, onlyOneSubAlias, sender);
+		return KMessageSingle.ofClickSuggestCommand(ret, this.getCommandLine());
+	}
+	@NotNull
+	public KMessageSingle getTemplateClickRun(boolean addDesc, boolean onlyFirstAlias, boolean onlyOneSubAlias, CommandSender sender) {
+		String ret = getTemplate(addDesc, onlyFirstAlias, onlyOneSubAlias, sender);
+		return KMessageSingle.ofClickRunCommand(ret, this.getCommandLine());
 	}
 
-	public Mson getTemplate(boolean addDesc, boolean onlyFirstAlias, boolean onlyOneSubAlias, CommandSender sender) {
+	@NotNull
+	public String getTemplate(boolean addDesc, boolean onlyFirstAlias, boolean onlyOneSubAlias, @Nullable CommandSender sender) {
 		// Get base
-		Mson ret = this.getTemplateChain(onlyFirstAlias, onlyOneSubAlias, sender);
-
-		List<KamiCommand> commands = this.getChain(true);
-		// Check if last command is parentCommand and make command suggestible/clickable
-		if (commands.get(commands.size() - 1).isParent()) {
-			ret = ret.command(this);
-		} else {
-			ret = ret.suggest(this);
-		}
+		StringBuilder ret = new StringBuilder(this.getTemplateChain(onlyFirstAlias, onlyOneSubAlias, sender));
 
 		// Add args
-		for (Mson parameter : this.getTemplateParameters(sender)) {
-			ret = ret.add(Mson.SPACE);
-			ret = ret.add(parameter.color(ChatColor.DARK_AQUA));
+		for (String parameter : this.getTemplateParameters(sender)) {
+			ret.append(" ").append(ChatColor.DARK_AQUA).append(parameter);
 		}
 
 		// Add desc
 		if (addDesc) {
-			ret = ret.add(Mson.SPACE);
-			ret = ret.add(mson(this.getDesc()).color(ChatColor.YELLOW));
+			ret.append(" ").append(ChatColor.YELLOW).append(this.getDesc());
 		}
 
 		// Return Ret
-		return ret;
+		return ret.toString();
 	}
 
-	public Mson getTemplateWithArgs(CommandSender sender, String... args) {
+	@NotNull
+	public String getTemplateWithArgs(CommandSender sender, String... args) {
 		return this.getTemplateWithArgs(sender, KUtil.list(args));
 	}
 
-	public Mson getTemplateWithArgs(CommandSender sender, @NotNull List<String> args) {
-		Mson ret = this.getTemplateChain(true, sender);
+	@NotNull
+	public String getTemplateWithArgs(CommandSender sender, @NotNull List<String> args) {
+		StringBuilder ret = new StringBuilder(this.getTemplateChain(true, sender));
 
 		for (String arg : args) {
-			ret = ret.add(Mson.SPACE);
-			ret = ret.add(mson(arg).color(ChatColor.DARK_AQUA));
+			ret.append(" ");
+			ret.append(ChatColor.DARK_AQUA).append(arg);
 		}
 
-		return ret;
+		return ret.toString();
 	}
 
-	public Mson getTemplateChain(boolean onlyFirstAlias, CommandSender sender) {
+	@NotNull
+	public String getTemplateChain(boolean onlyFirstAlias, CommandSender sender) {
 		return getTemplateChain(onlyFirstAlias, false, sender);
 	}
 
-	public Mson getTemplateChain(boolean onlyFirstAlias, boolean onlyOneSubAlias, CommandSender sender) {
-		Mson ret = TEMPLATE_CORE;
+	@NotNull
+	public String getTemplateChain(boolean onlyFirstAlias, boolean onlyOneSubAlias, @Nullable CommandSender sender) {
+		StringBuilder ret = new StringBuilder(TEMPLATE_CORE);
 
 		// Get commands
 		List<KamiCommand> commands = this.getChain(true);
@@ -1158,26 +1051,28 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		// Add commands
 		boolean first = true;
 		for (KamiCommand command : commands) {
-			Mson mson;
+			String base;
 
 			if ((first && onlyFirstAlias) || onlyOneSubAlias) {
-				mson = mson(command.getAliases().getFirst());
+				base = command.getAliases().getFirst();
 			} else {
-				mson = mson(Txt.implode(command.getAliases(), ","));
+				base = Txt.implode(command.getAliases(), ",");
 			}
 
 			if (sender != null && !command.isRequirementsMet(sender, false)) {
-				mson = mson.color(ChatColor.RED);
+				base = ChatColor.RED + base;
 			} else {
-				mson = mson.color(ChatColor.AQUA);
+				base = ChatColor.AQUA + base;
 			}
 
-			if (!first) ret = ret.add(Mson.SPACE);
-			ret = ret.add(mson);
+			if (!first) {
+				ret.append(" ");
+			}
+			ret.append(base);
 			first = false;
 		}
 
-		return ret;
+		return ret.toString();
 	}
 
 	public boolean isFullChainMet(CommandSender sender) {
@@ -1194,26 +1089,14 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 
 	}
 
-	protected List<Mson> getTemplateParameters(CommandSender sender) {
-		List<Mson> ret = new KamiList<>();
+	@NotNull
+	protected List<String> getTemplateParameters(@Nullable CommandSender sender) {
+		List<String> ret = new KamiList<>();
 
 		for (Parameter<?> parameter : this.getParameters()) {
 			ret.add(parameter.getTemplate(sender));
 		}
-
 		return ret;
-	}
-
-	public Mson getTemplate(boolean addDesc, boolean onlyFirstAlias) {
-		return getTemplate(addDesc, onlyFirstAlias, sender);
-	}
-
-	public Mson getTemplate(boolean addDesc) {
-		return getTemplate(addDesc, false);
-	}
-
-	public Mson getTemplate() {
-		return getTemplate(false);
 	}
 
 	// -------------------------------------------- //
@@ -1234,7 +1117,7 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		// Then parent commands
 		for (KamiCommand parent : this.getChain(false)) {
 			// Append parent
-			ret.append(parent.getAliases().get(0));
+			ret.append(parent.getAliases().getFirst());
 
 			// Append space
 			ret.append(' ');
@@ -1243,7 +1126,7 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		// Then ourself
 		if (this.getAliases().isEmpty())
 			throw new IllegalStateException(this.getClass().getSimpleName() + " has no aliases.");
-		ret.append(this.getAliases().get(0));
+		ret.append(this.getAliases().getFirst());
 
 		// Then args
 		for (String arg : args) {
@@ -1285,18 +1168,18 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		// If this isn't the last argument ...
 		if (args.size() != 1) {
 			// ... and there is a matching child ...
-			KamiCommand child = this.getChild(args.get(0));
+			KamiCommand child = this.getChild(args.getFirst());
 			if (child == null) return Collections.emptyList();
 
 			// ... get tab completions for that child.
-			args.remove(0);
+			args.removeFirst();
 			return child.getTabCompletions(args, sender);
 		}
 
 		// ... else check the children.
 		List<String> ret = new ArrayList<>();
 		//noinspection ConstantConditions
-		String token = args.get(args.size() - 1).toLowerCase();
+		String token = args.getLast().toLowerCase();
 		for (KamiCommand child : this.getChildren()) {
 			if (!child.isRelevant(sender)) continue;
 			ret.addAll(Txt.getStartsWithIgnoreCase(child.getAliases(), token));
@@ -1315,55 +1198,22 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 		return type.getTabListFiltered(sender, args.get(index));
 	}
 
-	// -------------------------------------------- //
-	// MESSAGE SENDING HELPERS
-	// -------------------------------------------- //
+	public List<String> applyConcatenating(List<String> args) {
+		// Really?
+		if (!this.isConcatenating()) return args;
 
-	// MSG
+		// Create Ret
+		List<String> ret = new KamiList<>();
 
-	public boolean msg(String msg) {
-		return MsonMessenger.get().msgOne(this.sender, msg);
-	}
+		// Fill Ret
+		final int maxIdx = Math.min(this.getConcatenationIndex(), args.size());
+		ret.addAll(args.subList(0, maxIdx)); // The args that should not be concatenated.
+		if (args.size() > maxIdx) {
+			ret.add(Txt.implode(args.subList(maxIdx, args.size()), " "));
+		}
 
-	public boolean msg(String msg, Object... args) {
-		return MsonMessenger.get().msgOne(this.sender, msg, args);
-	}
-
-	public boolean msg(Collection<String> msgs) {
-		return MsonMessenger.get().msgOne(this.sender, msgs);
-	}
-
-	// MESSAGE
-
-	public boolean message(Object message) {
-		return MsonMessenger.get().messageOne(this.sender, message);
-	}
-
-	public boolean message(Object... messages) {
-		return MsonMessenger.get().messageOne(this.sender, messages);
-	}
-
-	public boolean message(Collection<?> messages) {
-		return MsonMessenger.get().messageOne(this.sender, messages);
-	}
-
-	// CONVENIENCE MSON
-
-	@Contract(pure = true)
-	public static @NotNull Mson mson() {
-		return Mson.mson();
-	}
-
-	public static @NotNull Mson mson(Object @NotNull ... parts) {
-		return Mson.mson(parts);
-	}
-
-	public static @NotNull List<Mson> msons(Object @NotNull ... parts) {
-		return Mson.msons(parts);
-	}
-
-	public static @NotNull List<Mson> msons(@NotNull Collection<?> parts) {
-		return Mson.msons(parts);
+		// Return Ret
+		return ret;
 	}
 
 	// -------------------------------------------- //
@@ -1443,5 +1293,16 @@ public class KamiCommand implements Active, PluginIdentifiableCommand {
 
 		// Increment is done in this method
 		return readArgAt(idx);
+	}
+
+
+	public void setHelp(@NotNull List<KMessageSingle> help) {
+		this.help = help;
+	}
+	public void setHelp(@NotNull KMessageBlock block) {
+		this.help.clear();
+		for (String line : block.getLines()) {
+			this.help.add(new KMessageSingle(line));
+		}
 	}
 }
